Add computed models

--- a/literatura.bib
+++ b/literatura.bib
@@ -13,11 +13,40 @@
     pages = {1-100},
 }
 
+@article{mirt,
+    title = 	{mirt: A {Multidimensional} {Item} {Response} {Theory}
+{Package} for the {R} {Environment}},
+    author =	{R. Philip Chalmers},
+    journal = {Journal of Statistical Software},
+    volume = {4},
+    number = {3},
+    year = {2012},
+    pages = {1-29},
+}
+
+@article{spain,
+    title = 	{An {Analysis} of {Student} {Satisfaction}: {Full}-{Time} vs. {Part}-{Time} {Students}},
+    author =	{Ana Isabel Moro-Egido and Judith Panades},
+    journal = {Social Indicators Research},
+    volume = {4},
+    number = {3},
+    year = {2010},
+    pages = {1-26},
+}
+
 @Book{kniha,
     author ={X. Autor1 and Y. Autor2},
     title =        {Názov knihy},
     publisher =    {Vydavateľstvo},
     year =         {1900},
+}
+
+@misc{prieskum,
+  author = {SAAVŠ},
+  title = {Akademická štrťhodinka},
+  howpublished = "\url{https://prieskum.saavs.sk/o-prieskume/}",
+  year = {2021}, 
+  note = "[online]"
 }
 
 
