--- a/main.tex
+++ b/main.tex
@@ -5,9 +5,9 @@
 \usepackage[a4paper,top=2.5cm,bottom=2.5cm,left=3.5cm,right=2cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[slovak]{babel} % vypnite pre prace v anglictine!
+\usepackage[slovak]{babel}
 
-%nastavenie riadkovania podla smernice
+
 \linespread{1.25} 
 
 % balicek na vkladanie zdrojoveho kodu
@@ -186,7 +186,11 @@ Fakulta matematiky, fyziky a informatiky
 
 \input uvod.tex 
 
-\input jadro.tex
+\input ciel.tex
+
+\input metodika.tex
+
+\input vysledky.tex
 
 \input zaver.tex
 
@@ -208,9 +212,9 @@ Fakulta matematiky, fyziky a informatiky
 %Nepovinná časť prílohy obsahuje materiály, ktoré neboli zaradené priamo  do textu. Každá príloha sa začína na novej strane.
 %Zoznam príloh je súčasťou obsahu.
 %
-\input appendixA.tex
+%\input appendixA.tex
 
-\input appendixB.tex
+%\input appendixB.tex
 
 \end{document}
 
