--- a/uvod.tex
+++ b/uvod.tex
@@ -2,4 +2,5 @@
 \addcontentsline{toc}{chapter}{Úvod} % rucne pridanie do obsahu
 \markboth{Úvod}{Úvod} % vyriesenie hlaviciek
 
+V tejto kapitole bude spísaný úvod do problematiky práce.
 
