--- a/zaver.tex
+++ b/zaver.tex
@@ -2,3 +2,5 @@
 \addcontentsline{toc}{chapter}{Záver} % rucne pridanie do obsahu
 \markboth{Záver}{Záver} % vyriesenie hlaviciek
 
+V tejto kapitole budú zhrnuté výsledky a interpretácie našich analýz.
+
